--- a/package.json
+++ b/package.json
@@ -3,15 +3,27 @@
   "version": "1.0.0",
   "description": "Aplicación web que simula un blog de tecnología con información meteorológica. Incluye artículos destacados, buscador y un widget del clima.",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node src/index.js",
     "dev": "node --watch src/index.js",
     "test": "jest --verbose --runInBand --watchAll"
   },
+  "jest": {
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ]
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "dotenv": "^16.4.7"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
