--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "node --watch src/index.js",
+    "build": "cd FRONTEND_REACT && npm run build && mv -f dist/ ../src/public_frontend",
     "test": "jest --verbose --runInBand --watchAll"
   },
   "jest": {
